# Vyxal

./: .deepsource.toml  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.Dockerfile  .gitpod.yml  .mill-version  .pre-commit-config.yaml  .scala-steward.conf  .scalafix.conf  .scalafmt.conf  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Choices.yml  LICENSE  Procfile  README.md  README.txt  SECURITY.md  VyPage.txt  VyParse.py  VytoPy.txt  Vyxal.py  bases.py  build.sbt  build.sc  codepage.py  codepage.txt  commands.py  core-functions.md  debugger.py  dictconv.py  dictionary.js  dictionary.py  dictionary.txt  element-wishlist.txt  elements.txt  elements.yaml  encoding.py  flask_app.py  (+35 more)
.github/: dependabot.yml  labeler.yml  pull_request_template.md
commands/: 0_Start_Slice.md  1_Start_Slice.md  Absolute_Value.md  Addition.md  All.md  All_Same.md  Any.md  Assign_at_Index.md  Bitwise_And.md  Bitwise_Not.md  Bitwise_Or.md  Bitwise_Xor.md  Built-In_Function_Reference.md  Call_Function.md  Cartesian_Product.md  Chrord.md  Codepage_Constant.md  Combinations_With_Replacement.md  Complement.md  Compressed_Number.md  Compressed_String.md  Concatenation.md  Conditional_Execution.md  Constants.md  Contains.md  Context_Level_Down.md  Context_Level_Up.md  Context_Variable.md  Count.md  Counted_Generator.md  Counts.md  Cumulative_Sums.md  Decrement.md  Deltas.md  Distribute.md  Divides.md  Division.md  Divmod.md  Double.md  Duplicate.md  (+137 more)
contributing/: BuildTools.md  Building.md  Debugger.md  DictionaryCompression.md  Element Wishlist.md  ElementDocumentation.md  Fuzzing.md  Lexer.md  (+7 more)
(+378 files in other folders)
