[tool.poetry]
name = "vyxal"
version = "2.8.5"
description = "A golfing language that has aspects of traditional programming languages."
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/Vyxal/Vyxal/"
homepage = "https://vyxal.pythonanywhere.com/"

[tool.poetry.scripts]
vyxal = "vyxal.main:cli"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
sympy = "^1.9"
num2words = "^0.5.10"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
pytest = "^6.2.5"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py39']
extend-exclude = '^/tests/test_elements.py'
