[metadata]
name = Vyxal-Lyxal
version = 2.5.3
author = Lyxal
description = The Vyxal programming language
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Vyxal/Vyxal
project_urls =
    Bug Tracker = https://github.com/Vyxal/Vyxal/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    regex
    sympy
    pwn
    gitpython
    flask-cors

[options.packages.find]
where = src
